--- a/Noncooperative part in Jupyter/train.ipynb
+++ b/Noncooperative part in Jupyter/train.ipynb
@@ -27,6 +27,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pre-processing\n",
+    "# input: put CUHK01 dataset under data file: ./data/CUHK01\n",
+    "# output: training_set (./data/training_set) and test_set (./data/test_set)\n",
+    " \n",
+    "import os\n",
+    "import difflib\n",
+    "import shutil\n",
+    "\n",
+    "file_dir = \"./data/CUHK01/campus\"\n",
+    "save_train_dir = \"./data/training_set\"\n",
+    "save_test_dir = \"./data/test_set\"\n",
+    "\n",
+    "def order(file_list,file_dir_list):\n",
+    "    file_dict = {}\n",
+    "    for parent, _, filenames in os.walk(file_dir):\n",
+    "        for filename in filenames:\n",
+    "            file_dict[filename] = os.path.join(parent, filename)\n",
+    "    return sorted(file_dict.items(),key = lambda x:x[0], reverse = False)            \n",
+    "\n",
+    "def move_file(dict):\n",
+    "    index = 0\n",
+    "    dict_len = len(dict)\n",
+    "    while index < (dict_len-3):\n",
+    "        if index <= 870*4:#Keep 100 persons' images in test_set\n",
+    "            save_dir = save_train_dir\n",
+    "        else:\n",
+    "            save_dir = save_test_dir\n",
+    "        \n",
+    "        pic1_root = dict[index][1]        \n",
+    "        pic2_root = dict[index+1][1]          \n",
+    "        pic3_root = dict[index+2][1]          \n",
+    "        pic4_root = dict[index+3][1]\n",
+    "        \n",
+    "        save_doc_name = str(index//4)\n",
+    "        save_doc_root = os.path.join(save_dir, save_doc_name)\n",
+    "        if not os.path.exists(save_doc_root):\n",
+    "            os.makedirs(save_doc_root) \n",
+    "            \n",
+    "        shutil.copy(pic1_root,save_doc_root) \n",
+    "        shutil.copy(pic2_root,save_doc_root)\n",
+    "        shutil.copy(pic3_root,save_doc_root)\n",
+    "        shutil.copy(pic4_root,save_doc_root)        \n",
+    "        index += 4\n",
+    "\n",
+    "if __name__=='__main__':\n",
+    "    file_list=[]\n",
+    "    file_dir_list=[]\n",
+    "    file_dict=order(file_list,file_dir_list)\n",
+    "    move_file(file_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
